--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     </div>
 
     <br>
-    <div class="container"><a class="email" href="wenntextefuerunssind@proton.me">Schreib mir zurück</a></div>
+    <div class="container"><a class="email" href="mailto:wenntextefuerunssind@proton.me">Schreib mir zurück</a></div>
     <br>
 </body>
 </html>
